--- a/Dataway.Admin/Dataway.Admin/Web.config
+++ b/Dataway.Admin/Dataway.Admin/Web.config
@@ -60,7 +60,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
@@ -68,7 +68,15 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
           preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network host="mail.dataway.com.au" userName="smtp@dataway.com.au" password="secureA321!"></network>
+      </smtp>
+    </mailSettings>
+  </system.net>
+</configuration>
 
 
 
